--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,12 @@ repos:
       - id: check-docstring-first
       - id: check-yaml
       - id: check-toml
+  - repo: https://github.com/MarcoGorelli/absolufy-imports
+    rev: v0.3.1
+    hooks:
+      - id: absolufy-imports
+        name: absolufy-imports
+        files: ^stac_recipes/
   - repo: https://github.com/pycqa/isort
     rev: 5.13.2
     hooks:
@@ -38,3 +44,4 @@ repos:
     rev: v4.0.0-alpha.8
     hooks:
       - id: prettier
+        args: [--cache-location=.prettier_cache/cache]
